@@ -1,2 +1,0 @@
-xdbedizzy is a demo of the X11 Double Buffer Extension (DBE) creating a double
-buffered spinning scene.
