@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2015/07/02 12:38:33 rodent Exp $
-bin/xdbedizzy
-man/man1/xdbedizzy.1
