@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:34:37 nia Exp $
-
-BLAKE2s (xdbedizzy-1.1.0.tar.bz2) = 8dca339dd603b83f7d7ea2b4d37744004516fd1eee0387b860b2ea2ea43bcd63
-SHA512 (xdbedizzy-1.1.0.tar.bz2) = 58b9c88b09772008fe18921c0b63972a65ee5833f96edbbd2e1dc335e5f20ca9a241728b9a225e3b0f3eb392a7941cc1ab6e3c871b9463ff21bb23e38557e9fa
-Size (xdbedizzy-1.1.0.tar.bz2) = 110340 bytes
