@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.2724 2023/05/02 22:01:57 schmonz Exp $
+$NetBSD: CHANGES-2023,v 1.2725 2023/05/03 07:20:29 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -3819,3 +3819,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated textproc/py-nltk to 3.8.1 [wiz 2023-05-02]
 	Updated net/dbip-country-lite to 2023.05 [fcambus 2023-05-02]
 	Added sysutils/fp-checkpassword version 0.0.20171108 [schmonz 2023-05-02]
+	Removed x11/xdbedizzy [wiz 2023-05-03]
